[gd_scene load_steps=22 format=3 uid="uid://brb5jdbu1vpib"]

[ext_resource type="Script" path="res://scenes/GameScene/GameUI.gd" id="1_cxna0"]
[ext_resource type="PackedScene" uid="uid://drlf5jqav4jn8" path="res://scenes/WinScreen/WinScreen.tscn" id="2_02jfp"]
[ext_resource type="PackedScene" uid="uid://cu65a48yncws4" path="res://scenes/EndCredits/EndCredits.tscn" id="3_8t2xt"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/PauseMenuController.gd" id="4_qgesj"]
[ext_resource type="PackedScene" uid="uid://ns1o08cpcrk7" path="res://scenes/Menus/PauseMenu/PauseMenu.tscn" id="5_pmtgl"]
[ext_resource type="Script" path="res://scenes/GameScene/level_loader.gd" id="6_si4ym"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/MusicPlayers/BackgroundMusicPlayer.tscn" id="7_ekdma"]
[ext_resource type="PackedScene" uid="uid://cd0jbh4metflb" path="res://addons/maaacks_game_template/base/scenes/LoadingScreen/LoadingScreen.tscn" id="8_uru51"]
[ext_resource type="Script" path="res://scenes/GameScene/ConfigurableSubViewport.gd" id="9_7l15f"]
[ext_resource type="Shader" path="res://scenes/GameScene/texture_dither.gdshader" id="9_n7375"]
[ext_resource type="Texture2D" uid="uid://b52mkh0n7d3cy" path="res://assets/images/1bit_black_and_white.png" id="10_k5j6l"]
[ext_resource type="Texture2D" uid="uid://byqtcevo5a1y5" path="res://assets/images/bayer16.png" id="11_61kct"]
[ext_resource type="PackedScene" uid="uid://r27xbd24npvu" path="res://scenes/GameScene/light_mask_world.tscn" id="11_n6ijm"]
[ext_resource type="Script" path="res://scenes/GameScene/sub_viewport_contrast_setting.gd" id="12_qf6l4"]
[ext_resource type="Texture2D" uid="uid://bhas8rievdig7" path="res://assets/images/1bit_black_and_white_high.png" id="13_aq6ms"]
[ext_resource type="Texture2D" uid="uid://bgbbhu7hmavgk" path="res://assets/images/1bit_black_and_white_mid.png" id="14_c3tcn"]
[ext_resource type="Texture2D" uid="uid://dkxj5mc4618e0" path="res://assets/images/dot-4x4-outlined.png" id="14_m638k"]
[ext_resource type="Texture2D" uid="uid://bf28kaxbdhhyt" path="res://assets/images/1bit_black_and_white_low.png" id="15_4ya05"]
[ext_resource type="Texture2D" uid="uid://bl3d82rdutm5c" path="res://assets/images/1bit_black_and_white_lowest.png" id="16_5gnld"]

[sub_resource type="ViewportTexture" id="ViewportTexture_346v4"]
viewport_path = NodePath("LightMaskViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hpjnc"]
resource_local_to_scene = true
shader = ExtResource("9_n7375")
shader_parameter/bit_depth = 32
shader_parameter/pixel_size = 1
shader_parameter/contrast = 1.0
shader_parameter/offset = 0.1
shader_parameter/active = true
shader_parameter/dither_texture = ExtResource("11_61kct")
shader_parameter/mask_texture = SubResource("ViewportTexture_346v4")
shader_parameter/color_palette = ExtResource("10_k5j6l")

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxna0")
win_scene = ExtResource("2_02jfp")
metadata/_edit_horizontal_guides_ = [732.0]

[node name="PauseMenuController" type="Node" parent="."]
script = ExtResource("4_qgesj")
pause_menu_packed = ExtResource("5_pmtgl")

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("6_si4ym")
level_container = NodePath("../ViewportContainer/ConfigurableSubViewport/LevelContainer")

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("7_ekdma")]

[node name="LoadingScreen" parent="." instance=ExtResource("8_uru51")]
visible = false

[node name="LightMaskViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="LightMaskViewportContainer"]
own_world_3d = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="LightMaskWorld" parent="LightMaskViewportContainer/SubViewport" instance=ExtResource("11_n6ijm")]
unique_name_in_owner = true

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_hpjnc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_qf6l4")
color_palettes = Array[Texture]([ExtResource("13_aq6ms"), ExtResource("14_c3tcn"), ExtResource("15_4ya05"), ExtResource("16_5gnld")])

[node name="ConfigurableSubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4
script = ExtResource("9_7l15f")

[node name="LevelContainer" type="Node3D" parent="ViewportContainer/ConfigurableSubViewport"]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="OrbCountLabel" type="Label" parent="MarginContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 156.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionLabel" type="Label" parent="MarginContainer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="InputActionLabel" type="Label" parent="MarginContainer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="NarrationLabel" type="Label" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -143.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CrossHairTextureRect" type="TextureRect" parent="MarginContainer/Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.5)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -328.0
offset_right = 608.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("14_m638k")
stretch_mode = 3

[node name="EndCredits" parent="." instance=ExtResource("3_8t2xt")]
layout_mode = 1
enabled = false

[node name="ScrollCreditsDelayTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="level_load_started" from="LevelLoader" to="." method="_on_level_loader_level_load_started"]
[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
[connection signal="levels_finished" from="LevelLoader" to="." method="_on_level_loader_levels_finished"]
[connection signal="timeout" from="ScrollCreditsDelayTimer" to="." method="_on_scroll_credits_delay_timer_timeout"]
